# dosbox-x-subtitle-extractor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
.learnings/: websocket_frame_rate.md
game_profiles/: README.md
include/: gamelink_interface.h  ocr_bridge.h  subtitle_extractor.h  subtitle_format.h  web_server.h
resources/: web_remote.html
scripts/: setup_paddleocr.sh
src/: gamelink_interface.cpp  main.cpp  ocr_bridge.cpp  ocr_bridge.mm  ollama_ocr.cpp  ollama_ocr.mm  paddle_ocr.cpp  subtitle_extractor.cpp  subtitle_format.cpp  vision_ocr.mm  web_server.cpp
tests/: CMakeLists.txt  test_ocr.cpp
